--- a/src/app/components/alert/alert.component.html
+++ b/src/app/components/alert/alert.component.html
@@ -2,6 +2,6 @@
   class="border-l-4 opacity-0 h-0 p-0 transitions"
   [ngClass]="{'bg-green-100 border-green-500 text-green-700': success, 'opacity-100 h-full p-4': showMsg, 'bg-red-100 border-red-500 text-red-700': !success}"
   role="alert">
-  <p class="font-bold">{{ success ? 'Success' : 'Failure' }}</p>
-  <p>{{ msg }}</p>
+  <p class="font-bold">{{ p1 }}</p>
+  <p>{{ p2 }}</p>
 </div>
