--- a/src/app/components/list-header/list-header.component.html
+++ b/src/app/components/list-header/list-header.component.html
@@ -92,7 +92,7 @@
                 <p>Download</p>
               </div>
             }
-            <div class="p-2 hover:bg-gray-100 flex gap-2 items-center">
+            <div class="p-2 hover:bg-gray-100 flex gap-2 items-center" (click)="deleteAll()">
               <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#ff0000"
                    class="w-6 h-6">
                 <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -111,7 +111,7 @@
                     stroke="#ff0000" stroke-width="1.5" stroke-linecap="round"></path>
                 </g>
               </svg>
-              <button class="text-red-500" (click)="deleteAll()">Delete</button>
+              <button class="text-red-500">Delete</button>
             </div>
           </div>
         }
