--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -8,13 +8,21 @@
       <p>{{ initials }}</p>
     </div>
     <div class="anchorContainer">
+      <a href="/home" class="anchor">
+        <img src="/home.png" alt="home" class="anchorImg">
+        <p class="anchorText">Home</p>
+      </a>
       @if (isTmOrPm(role)) {
-        <a href="/home" class="anchor">
-          <img src="/home.png" alt="home" class="anchorImg">
-          <p class="anchorText">Home</p>
+        <a href="/report-templates" class="anchor">
+          <img src="/templates.png" alt="report templates" class="anchorImg"/>
+          <p class="anchorText">Templates</p>
+        </a>
+        <a href="/spreadsheets" class="anchor">
+          <img src="/spreadsheet.png" alt="spreadsheets" class="anchorImg"/>
+          <p class="anchorText">Spreadsheets</p>
         </a>
         <a href="/reports" class="anchor">
-          <img src="/reports.png" alt="reports" class="anchorImg">
+          <img src="/sheet-tst.png" alt="reports" class="anchorImg">
           <p class="anchorText">Reports</p>
         </a>
         <a href="/home" class="anchor">
@@ -59,7 +67,8 @@
           </svg>
         </button>
 
-        <button class="absolute right-0 border-l-1 h-full flex items-center border-gray-200" (click)="resetSearchText()">
+        <button class="absolute right-0 border-l-1 h-full flex items-center border-gray-200"
+                (click)="resetSearchText()">
           <svg viewBox="0 0 76.00 76.00" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                version="1.1" baseProfile="full" enable-background="new 0 0 76.00 76.00" xml:space="preserve"
                fill="#8a1f1c" width="46" height="46">
@@ -71,10 +80,12 @@
                     d="M 47.5282,42.9497L 42.5784,38L 47.5282,33.0502L 44.9497,30.4718L 40,35.4216L 35.0502,30.4718L 32.4718,33.0502L 37.4216,38L 32.4718,42.9497L 35.0502,45.5282L 40,40.5784L 44.9497,45.5282L 47.5282,42.9497 Z M 18.0147,41.5355L 26.9646,50.4854C 28.0683,51.589 29,52 31,52L 52,52C 54.7614,52 57,49.7614 57,47L 57,29C 57,26.2386 54.7614,24 52,24L 31,24C 29,24 28.0683,24.4113 26.9646,25.5149L 18.0147,34.4645C 16.0621,36.4171 16.0621,39.5829 18.0147,41.5355 Z M 31,49C 30,49 29.6048,48.8828 29.086,48.3641L 20.1361,39.4142C 19.355,38.6332 19.355,37.3669 20.1361,36.5858L 29.086,27.6362C 29.6048,27.1175 30,27 31,27.0001L 52,27.0001C 53.1046,27.0001 54,27.8955 54,29.0001L 54,47.0001C 54,48.1046 53.1046,49.0001 52,49.0001L 31,49 Z "></path> </g></svg>
         </button>
       </div>
-      <img alt="logo" src="/huawei.png" class="w-8 h-8 sm:w-12 sm:h-12"/>
+      <a routerLink="/home">
+        <img alt="logo" src="/huawei.png" class="w-8 h-8 sm:w-12 sm:h-12"/>
+      </a>
     </div>
 
-    <div class="main">
+    <div class="main" [ngClass]="!padding ? 'p-0' : 'p-6 sm:p-10'">
       <ng-content></ng-content>
     </div>
   </div>
