--- a/src/app/components/activate-account/activate-account.component.html
+++ b/src/app/components/activate-account/activate-account.component.html
@@ -53,7 +53,7 @@
         </div>
         <div class="pl-2 pb-4 text-red-600 transition-all opacity-0"
              [class.opacity-100]="formHelper.isInvalid(password)">
-          <p>{{ password?.hasError('required') ? 'Please set a password' : (password?.hasError('pattern') ? 'A password must be 8 characters long, contain special characters, numbers as well as upper and lowercase letters' : '') }}</p>
+          <p>{{ password.hasError('required') ? 'Please set a password' : (password.hasError('pattern') ? 'A password must be 8 characters long, contain special characters, numbers as well as upper and lowercase letters' : '') }}</p>
         </div>
       </div>
       <div class="flex flex-col gap-2">
@@ -72,7 +72,7 @@
         </div>
         <div class="pl-2 pb-4 text-red-600 transition-all opacity-0"
              [class.opacity-100]="formHelper.isInvalid(confirmPassword)">
-          <p>{{ confirmPassword?.hasError('required') ? 'Please confirm your password' : (confirmPassword?.hasError('different') ? 'The passwords don\'t match' : '') }}</p>
+          <p>{{ confirmPassword.hasError('required') ? 'Please confirm your password' : (confirmPassword.hasError('different') ? 'The passwords don\'t match' : '') }}</p>
         </div>
       </div>
       <div class="flex flex-col gap-3">
