--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,12 +7,12 @@
     </div>
     <div class="flex flex-col gap-5 sm:flex-row">
       <button
-        class="flex px-5 py-2 rounded-lg gap-2 justify-center items-center text-sm border border-gray-200 hover:shadow-xl hover:-translate-y-0.5 hover:scale-110 transition-all duration-200 ease-in-out">
+        class="flex px-5 py-2 rounded-lg gap-2 justify-center items-center text-sm border border-gray-200 hover:shadow-xl hover:-translate-y-0.5 hover:scale-110 transition-all duration-200 ease-in-out cursor-pointer">
         <img src="/group.png" alt="team" class="w-6 h-6"/>
         Team spreadsheets
       </button>
       <button
-        class="flex px-5 py-2 rounded-lg gap-2 justify-center items-center text-sm border border-gray-200 hover:shadow-xl hover:-translate-y-0.5 hover:scale-110 transition-all duration-200 ease-in-out">
+        class="flex px-5 py-2 rounded-lg gap-2 justify-center items-center text-sm border border-gray-200 hover:shadow-xl hover:-translate-y-0.5 hover:scale-110 transition-all duration-200 ease-in-out cursor-pointer">
         <img src="/favorite.png" alt="team" class="w-6 h-6"/>
         Favorites
       </button>
