--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,16 @@
 
 @source "./src/**/*.{html,ts}";
 
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
+
 @layer components {
   .sideBar {
     @apply
