--- a/src/app/components/data-management/data-management.component.html
+++ b/src/app/components/data-management/data-management.component.html
@@ -32,14 +32,14 @@
   <div
     class="flex p-5 w-full bg-gray-100 rounded-b-3xl shadow-lg text-center justify-center items-center gap-2 sm:gap-5">
     <button
-      class="px-3 py-1 w-1/3 sm:w-1/4 md:w-1/6 lg:w-1/8 bg-white shadow-xl rounded-lg transformations"
+      class="px-3 py-1 w-1/3 sm:w-1/4 md:w-1/6 lg:w-1/8 bg-white shadow-xl rounded-lg transformations cursor-pointer"
       (click)="prevPage()">Previous
     </button>
     <div
       class="px-3 py-1 w-1/8 sm:w-1/12 md:w-1/18 lg:w-1/24 bg-white shadow-xl rounded-lg transformations">{{ currentPage() }}
     </div>
     <button
-      class="px-3 py-1 w-1/3 sm:w-1/4 md:w-1/6 lg:w-1/8 bg-white shadow-xl rounded-lg transformations"
+      class="px-3 py-1 w-1/3 sm:w-1/4 md:w-1/6 lg:w-1/8 bg-white shadow-xl rounded-lg transformations cursor-pointer"
       (click)="nextPage()">Next
     </button>
   </div>
@@ -55,7 +55,7 @@
       >
         <div class="relative bg-white max-h-[70vh] px-4 pt-5 pb-4 sm:p-8 rounded-2xl">
           <div class="relative w-full h-[2vh] p-0">
-            <button type="button" class="absolute right-0 top-0" (click)="dismiss()">
+            <button type="button" class="absolute right-0 top-0 cursor-pointer" (click)="dismiss()">
               <img src="/close.png" class="w-3 h-3"/>
             </button>
           </div>
@@ -115,7 +115,7 @@
           @if (deleteOp) {
             @if (showWarning) {
               <button
-                class="inline-flex w-full justify-center items-center gap-3 rounded-md bg-green-700 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-green-500 sm:ml-3 sm:w-auto"
+                class="inline-flex w-full justify-center items-center gap-3 rounded-md bg-green-700 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-green-500 sm:ml-3 sm:w-auto cursor-pointer"
                 (click)="dismissWarning(false)">
                 Proceed
                 <svg viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -134,24 +134,24 @@
               </button>
             } @else {
               <button (click)="deleteEntities()"
-                      class="inline-flex w-full justify-center rounded-md bg-red-800 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-red-600 sm:w-auto">
+                      class="inline-flex w-full justify-center rounded-md bg-red-800 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-red-600 sm:w-auto cursor-pointer">
                 Yes, I'm sure!
               </button>
             }
           } @else if (isSubmittable()) {
             <button type="submit"
                     form="modalForm"
-                    class="inline-flex w-full justify-center rounded-md bg-green-600 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-green-500 sm:ml-3 sm:w-auto">
+                    class="inline-flex w-full justify-center rounded-md bg-green-600 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-green-500 sm:ml-3 sm:w-auto cursor-pointer">
               Confirm
             </button>
           }
           <button type="button" (click)="dismiss()"
-                  class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-xs ring-1 ring-gray-300 ring-inset hover:bg-gray-50 sm:mt-0 sm:w-auto">
+                  class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-xs ring-1 ring-gray-300 ring-inset hover:bg-gray-50 sm:mt-0 sm:w-auto cursor-pointer">
             Cancel
           </button>
           @if (deleteOp && !showWarning) {
             <button type="button" (click)="dismissWarning(true)"
-                    class="mt-3 inline-flex w-full justify-center items-center gap-3 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-xs ring-1 ring-gray-300 ring-inset hover:bg-gray-50 sm:mt-0 sm:w-auto">
+                    class="mt-3 inline-flex w-full justify-center items-center gap-3 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-xs ring-1 ring-gray-300 ring-inset hover:bg-gray-50 sm:mt-0 sm:w-auto cursor-pointer">
 
               <svg viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"
                    width="14" height="14">
