--- a/src/app/components/preview/preview.component.html
+++ b/src/app/components/preview/preview.component.html
@@ -19,7 +19,7 @@
   </div>
   <app-table [rowCount]="table.rowCount" [cols]="table.cols" [fullRow]="table.row"></app-table>
   <div class="relative z-10 w-full flex justify-center items-center p-2">
-    <a [href]="link" class="bg-red-800 text-white text-center rounded-xl p-2 w-2/3 sm:w-1/4 group-hover:-translate-y-1 group-hover:scale-110 transition-all duration-500 ease-in-out">Open Spreadsheet</a>
+    <a [routerLink]="link" class="bg-red-800 text-white text-center rounded-xl p-2 w-2/3 sm:w-1/4 group-hover:-translate-y-1 group-hover:scale-110 transition-all duration-500 ease-in-out">Open Spreadsheet</a>
   </div>
 </div>
 
